Fixed modals in dark mode regression

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -449,6 +449,7 @@ input:focus,
     background: #000;
 }
 
+.epm-modal .modal-content,
 .modal-content {
     background: var(--whitegrey);
 }
